fixed scrollbar class

--- a/resources/sass/resume_builder/components/scrollbar.scss
+++ b/resources/sass/resume_builder/components/scrollbar.scss
@@ -1,4 +1,4 @@
-.resume-builder-scroll {
+.resume-builder__scroll {
     overflow: auto;
 
     scrollbar-color: $mainColor $bgScrollBarColor;
